[horizontal]
WARNING: Detail complet des mises à jour sur https://github.com/guenneguezt/plugin-ecodevice/commits/master[Historique Commit]

Liste des évolutions majeures de la version courante :

- Modification pour compatibilité Jeedom V3
- Plus de suivi de version

Anciennes évolutions :

- Correction pour firmware 1.04.82
- Correction du triphase
- Correction du daemon
- Ajout de la génération automatique et intélligente des commandes de téléinfo
- Changement unité Ampere en A
- Ajout de daemon pour valeur variant rapidement
- Commande par type de compteur (eau, gaz, electricité, fuel)
- Ajout des max et min pour widget
- Widget par defaut
- Amélioration de FAQ
- Correction commande reboot.
- Modification pour recréer les sous commande s'ils n'existent plus.
- Correction de la commande reboot
- Ajout de commande pour reboot
- Detection des xml corrompu.
- Mise a jour des entrées analogiques, même si la valeur ne change pas pour les graphiques.
- Ajout de Intensité souscrite.
- Intensité maximale.
- Ajout du compteur journalier en monde non fuel.
- Modification de cron pour plus d'autonomie.
- Modification de l'extension du logo.
- Compatibilité Imperihome
- Retrait de la suppression des équipements lors de la désactivation du plugin
- Correction par rapport au nouveau core.
- Suppression de l'info `updatetime`.
- Ajout de données évolution (variation par minute).
- Ajout d'un choix de tarification pour ne présenter que les commandes correspondantes à celle-ci.
- Ajout de lien vers les options d'affichage.
- Correction de double cron.
- Ajout du nombre d'impulsions par minute.
- Redéclenchement jusqu'à 3 fois en cas d'indisponibilité de l'ecodevice.
- Ajout d'une information `status`.
- Ne pas mettre a jour les données si elles ne changent pas.
- Problème de ZIP.
- Initialisation.