@@ -3,7 +3,7 @@
 	"name" : "Eco-device",
 	"licence" : "AGPL",
 	"author" : "Thomas Guenneguez",
-	"require" : "2.0",
+	"require" : "3.0",
 	"category" : "automation protocol",
 	"installation" : "Nécessite firmware 1.04.82 minimum",
 	"hasOwnDeamon" : true
