@@ -1,15 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<info>
-    <id>ecodevice</id>
-    <name>Eco-device</name>
-    <description>Plugin pour gerer les cartes ecodevice GCE</description>
-    <icon>fa fa-sitemap</icon>
-    <licence>AGPL</licence>
-    <author>Thomas Guenneguez</author>
-    <installation>Nécessite firmware 1.04.82 minimum</installation>
-    <require>2.0</require>
-    <version>2.03</version>
-    <category>automation protocol</category>
-    <hasOwnDeamon>1</hasOwnDeamon>
-</info>
-
