@@ -3,11 +3,12 @@ WARNING: Detail complet des mises à jour sur https://github.com/guenneguezt/plu
 
 Liste des évolutions majeures de la version courante :
 
-- Modification pour compatibilité Jeedom V3
-- Plus de suivi de version
+- Ajout d'une Clef API specifique au plugin
 
 Anciennes évolutions :
 
+- Modification pour compatibilité Jeedom V3
+- Plus de suivi de version
 - Correction pour firmware 1.04.82
 - Correction du triphase
 - Correction du daemon
